# keybr-tui

./: .editorconfig  .gitattributes  .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  flake.nix  index.html  install.sh  justfile
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml  sync-installer.yml
contrib/: PKGBUILD
data/: README.md  wordlist-en.txt
docs/: comparison.md  faq.md  troubleshooting.md
src/: app.rs  config.rs  events.rs  main.rs  metrics.rs  persistence.rs  tui.rs  ui.rs  update.rs
src/components/: dashboard.rs  key_bar.rs  menu.rs  mod.rs  progress.rs  settings.rs  stats_bar.rs  summary.rs  typing_area.rs
src/engine/: confidence.rs  dictionary.rs  filter.rs  generator.rs  mod.rs  phonetics.rs  scheduler.rs  transition.rs
