[package]
name = "keybr-tui"
version = "0.1.0-dev"
edition = "2021"
rust-version = "1.75"
license = "MIT"
description = "A terminal typing trainer inspired by keybr.com with adaptive learning"
repository = "https://github.com/y0sif/keybr-tui"
keywords = ["typing", "tui", "terminal", "keyboard", "trainer"]
categories = ["command-line-utilities"]

[dependencies]
ratatui = "0.29"
crossterm = "0.28"
color-eyre = "0.6"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
toml = "0.8"
serde_json = "1"
directories = "6"
