[package]
name = "keybr-tui"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
authors = ["y0sif <yosif@outbond.io>"]
license = "MIT"
description = "A terminal typing trainer inspired by keybr.com with adaptive learning"
repository = "https://github.com/y0sif/keybr-tui"
homepage = "https://github.com/y0sif/keybr-tui"
documentation = "https://docs.rs/keybr-tui"
keywords = ["typing", "tui", "terminal", "keyboard", "trainer"]
categories = ["command-line-utilities"]
readme = "README.md"

[dependencies]
ratatui = "0.29"
crossterm = "0.28"
color-eyre = "0.6"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
toml = "0.8"
serde_json = "1"
directories = "6"

[profile.release]
lto = true
codegen-units = 1
strip = "symbols"
panic = "abort"
opt-level = 3
